<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XHuloo</string>
    <string name="ok">OK</string>
    <string name="XA_activity_lable">XA_activity</string>
    <string name="hint_checkbok">hint_checkbok</string>
    <string name="MP_activity_lable">MP_activity</string>
    <string name="MP_tv">WHAT?</string>
    <string name="PH_activity_lable">PH_activity</string>
    <string name="MEM_activity_lable">MEM_activity</string>
    <string name="pleaseInput">pleaseInput</string>
    <string name="noFond">NoFond</string>
    <string name="goback">返回</string>
    <string name="to_top">BACK_TO_TOP</string>

    <!-- XhulooActivity_weatherreport -->

    <string name="WR_activity_lable">WR_activity</string>
    <string name="strweek">星期</string>
    <string name="strweather">sunning</string>
    <string name="temp">21C</string>
    <string name="advise">advise</string>
    <string name="wind">wind</string>
    <string name="COM_activity_lable">COM_activity</string>

    <!-- XhulooActivity_playmusic -->
    <string name="PM_activity_lable">PM_activity</string>
    <string name="music_PM">音乐</string>
    <string name="previous_PM">上一首</string>
    <string name="play_PM">播放</string>
    <string name="next_PM">下一首</string>
    <string name="pause_PM">暂停</string>
    <string name="unb_bt">unb_bt</string>
    <string name="bindservice_bt">bindservice_bt</string>
    <string name="PM_mp_s">/sdcard/music/王力宏_花田错.mp3</string>

    <!--  -->
    <string name="ms_notifi_text">播放音乐ms_notifi_text</string>

    <!-- XhulooActivity_audioRecord -->
    <string name="AR_activity_lable">AR_activity</string>
    <string name="ar_tv">录音</string>
    <string name="ar_startrecording">开始录音</string>
    <string name="ar_stoprecording">停止录音</string>

    <!-- XhulooActivity_cupinfo -->
    <string name="CI_activity_lable">CPU信息[XHuloo]</string>

    <!-- XAplasma -->
    <string name="pl_so">so</string>
    <string name="pl_plasma">so</string>
    <string name="pl_Reset">重置</string>
    <string name="pl_ConvertImage">转换灰色</string>
    <string name="pl_FindEdges">边界</string>
    <string name="pl_Dimmer">暗</string>
    <string name="pl_Brighter">亮</string>

    <!-- XA_smallshell -->
    <string name="XA_smallshell">smallshell</string>
    <string name="ss_cmd_tv_s">命令</string>
    <string name="ss_cmd_et_s">cat</string>
    <string name="ss_parameter_tv_s">参数</string>
    <string name="ss_parameter_et_s">/proc/meminfo</string>
    <string name="ss_workdir_tv_s">目录</string>
    <string name="ss_workdir_et_s">/system/bin/</string>
    <string name="ss_update_bt">提交</string>
    <string name="ss_output">输出结果。。。</string>

    <!-- XA_camera -->
    <string name="XA_camera_save">正在保存……</string>
    <string name="XA_camera_note"> 请按\"相机\"按钮OR VOLUME_DOWN</string>
    <string name="XA_camera_savef">图片保存完成</string>

    <!-- package browser -->
    <!-- browser_main_view -->
    <string name="pac_b_bmv_history">历史</string>
    <string name="pac_b_bmv_about">关于</string>
    <string name="pac_b_bmv_dia_about">测试浏览器</string>
    <string name="pac_b_bmv_close_btn">关闭</string>
    <string name="pac_b_bmv_open_btn">打开</string>
    <string name="pac_b_bmv_del_btn">删除</string>
    <string name="pac_b_bmv_ok_btn">是</string>
    <string name="pac_b_bmv_no_btn">否</string>
    <string name="pac_b_bmv_fav_name">收藏夹</string>
    <string name="pac_b_bmv_shortcut">快捷方式</string>
    <string name="pac_b_bmv_addFavorite">收藏网页</string>
    <string name="pac_b_bmv_favorite">管理收藏夹</string>
    <string name="pac_b_bmv_preference">设置</string>
    <string name="pac_b_bmv_http_name">网页属性</string>
    <string name="pac_b_bmv_long_press">长按操作</string>
    <string name="pac_b_bmv_exit_title">提示</string>
    <string name="pac_b_bmv_exit_message">是否要退出?</string>
    <string name="pac_b_bmv_backBt">返回按钮</string>
    <string name="pac_b_bmv_forwardBt">前进按钮</string>
    <string name="pac_b_bmv_menuBt">菜单按钮</string>

    <!-- pac database -->
    <string name="pac_db_dbname">db文件路径</string>
    <string name="pac_db_bt">执行</string>
    <string name="pac_db_outIsNull">结果为空</string>
    <string name="pac_db_path">/data/data/com.og.danjiddz/databases/ddz.LandLords</string>

    <!-- pac_sec -->
    <string name="pac_sec_encrypt">加密</string>
    <string name="pac_sec_decrypt">解密</string>
    <string name="pac_sec_t">AES加密方法图形界面</string>
    <string name="pac_sec_warning">警告</string>
    <string name="pac_sec_w">输入为空</string>

    <!-- pac_ad_dp -->
    <string name="pac_ad_dp_bt1">一键就锁屏</string>
    <string name="pac_ad_dp_bt2">获得管理员</string>
    <string name="pac_ad_dp_bt3">注销管理员</string>
    <string name="pac_ad_dp_bt4">更改新密码</string>
    <string name="pac_ad_dp_bt5">更改新二码</string>

</resources>