<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
	<TextView  
	    android:id="@+id/ar_tv"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/ar_tv"
    	/>
	
	<Button 
    	android:id="@+id/ar_startrecording"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/ar_startrecording"
    />
	
	<Button  
		android:id="@+id/ar_stoprecording"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/ar_stoprecording"
    	/>
    
</LinearLayout>